# spore-core

./: .env.observability.example  .gitignore  LICENSE  PROJECT_STATE.md  README.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: go.yml  python.yml  rust.yml  typescript.yml
docs/: README.md  consumer-friction-plan.md  harness-engineering-concepts.md
docs/concepts/: architecture.md  loop-strategies.md  memory.md  modes-and-approval.md  multi-agent.md  observability.md  tools.md
docs/design/: isolation-backends.md
docs/go/: quickstart.md
docs/guides/: building-a-tool.md  conversation.md  custom-harness.md  quickstart.md
docs/python/: quickstart.md
docs/reference/: harness-builder.md  storage-seam.md  stream-events.md
docs/rust/: building-a-tool.md  conversation.md  custom-harness.md  quickstart.md
docs/typescript/: quickstart.md
examples/01-hello-agent/: Cargo.toml  README.md
examples/01-hello-agent/src/: main.rs
examples/02-conversational-repl/: Cargo.toml  README.md
examples/02-conversational-repl/src/: main.rs
examples/03-tool-use/: Cargo.toml  README.md
examples/03-tool-use/src/: main.rs
examples/python/04-filesystem-agent/: README.md  main.py  pyproject.toml
examples/python/04-filesystem-agent/sample-files/: harness.txt
examples/python/06-web-research/: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/python/09-self-verifying/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_main.py
examples/python/11-multi-agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_main.py
examples/rust/04-filesystem-agent/: Cargo.toml  README.md
examples/rust/04-filesystem-agent/sample-files/: mycelium.txt  spores.txt
examples/rust/04-filesystem-agent/src/: main.rs
examples/rust/05-custom-sandboxed-tool/: .env.example  Cargo.toml  README.md
examples/rust/05-custom-sandboxed-tool/src/: main.rs
examples/rust/05-custom-sandboxed-tool/src/tools/: mod.rs  recall.rs  remember.rs
examples/rust/06-web-research/: .env.example  .gitignore  Cargo.toml  README.md
examples/rust/06-web-research/src/: main.rs
examples/rust/07-memory/: .gitignore  Cargo.toml  README.md
examples/rust/07-memory/src/: main.rs  memory_provider.rs
examples/rust/08-plan-execute/: .env.example  .gitignore  Cargo.toml  README.md
examples/rust/08-plan-execute/src/: main.rs
examples/rust/08-plan-execute/workspace/: Async_Runtime_Comparison_Report.md
examples/rust/09-self-verifying/: .env.example  .gitignore  Cargo.toml  README.md
examples/rust/09-self-verifying/src/: main.rs
examples/rust/10-hill-climbing/: .env.example  .gitignore  Cargo.toml  README.md
examples/rust/10-hill-climbing/src/: main.rs
examples/rust/11-multi-agent/: .env.example  .gitignore  Cargo.toml  README.md
examples/rust/11-multi-agent/src/: main.rs
examples/rust/12-cordyceps/: .env.example  .gitignore  Cargo.toml  README.md
examples/rust/12-cordyceps/skills/: README.md
examples/rust/12-cordyceps/skills/deep-code-review/: SKILL.md
examples/rust/12-cordyceps/src/: main.rs  skills.rs
examples/rust/12-cordyceps/src/tools/: consult.rs  load_skill.rs  mod.rs  send_message.rs
fixtures/: README.md
fixtures/budget_policy/: cases.json
fixtures/cache_provider/: parse_cache_stats.json
fixtures/compaction_loop/: cases.json
fixtures/compaction_verifier/: cases.json
fixtures/compaction_window/: cases.json
fixtures/completion_check/: sql_result.json
fixtures/harness/: consult.json  escalation_signals.json  ralph.json  registry_errors.json  self_verifying.json  streaming_events.json
fixtures/hooks/: command_handler_io.json  hook_decision_wire.json  pre_tool_use_mutation.json  stop_block_basic.json
fixtures/metric_evaluator/: hill_climbing_sequences.json  parse_metric.json  should_keep.json
fixtures/middleware/: checklist_basic.json
fixtures/model_hashing/: cases.json
fixtures/observability/: session_metrics_basic.json  trace_line_compaction.json  trace_line_context_assembly.json  trace_line_middleware.json  trace_line_patch.json  trace_line_sensor.json  trace_line_session_summary.json  trace_line_tool_call.json  trace_line_turn.json  (+4 more)
go/: CONVENTIONS.md  go.work  go.work.sum
observability/: TRACE_SCHEMA.md  alloy.river  docker-compose.observability.yml  prometheus.yml  tempo.yaml
python/: CONVENTIONS.md  pyproject.toml
rust/: CONVENTIONS.md  Cargo.toml
rust/crates/spore-core/: Cargo.toml  README.md
rust/crates/spore-core/examples/: e2e_agent.rs  observability_smoke.rs
rust/crates/spore-core/src/: agent.rs  anthropic.rs  cache_provider.rs  compaction_adapter.rs  context.rs  execution_registry.rs  guide_registry.rs  harness.rs  hooks.rs  lib.rs  macros.rs  memory.rs  metric.rs  middleware.rs  model.rs  observability.rs  observability_outbox.rs  ollama.rs  openai.rs  output_schema.rs  plan.rs  prompt_assembly.rs  prompt_chunk_registry.rs  prompt_tool_call.rs  sandbox.rs  scenarios.rs  sensor.rs  skills.rs  storage.rs  tasklist.rs  termination.rs  tool_call_repair.rs  tool_registry.rs  verifier.rs
rust/crates/spore-core/src/storage/: tests.rs
rust/crates/spore-core/src/tools/: catalogue.rs  control.rs  edit.rs  error.rs  exec.rs  fs.rs  git.rs  http.rs  memory.rs  message.rs  mod.rs  params.rs  search.rs  subagent.rs  tasklist.rs  todo.rs  web.rs
rust/crates/spore-core/tests/: agent_fixture_replay.rs  cordyceps_composition_fixture_replay.rs  e2e_scenarios.rs  escalation_loop_fixture_replay.rs  escalation_signals_fixture_replay.rs  harness_fixture_replay.rs  hooks_fixture_replay.rs  model_fixture_replay.rs  ollama_fixture_replay.rs  output_schema_fixture_replay.rs  plan_execute_dag_fixture_replay.rs  plan_execute_loop_fixture_replay.rs  plan_phase_fixture_replay.rs  prompt_tool_call_escalation.rs  tool_error_loop_fixture_replay.rs
rust/crates/spore-eval/: Cargo.toml  README.md
rust/crates/spore-eval/src/: harness.rs  lib.rs  manifest.rs  metric_map.rs  report.rs  stats.rs  task.rs  tests.rs  verifier.rs  worktree.rs
typescript/: CONVENTIONS.md  package.json  pnpm-lock.yaml
(+529 files in other folders)
