[project]
name = "spore-core-workspace"
version = "0.0.0"
description = "spore-core Python workspace root"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["packages"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that require external services",
    "dangerous: exercises the gated `dangerous` opt-in (Yolo / IsolationMode None, issue #34)",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22",
    "ruff>=0.15.13",
]
