[package]
name = "tool-use"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 03: a ReAct agent with trivial local tools (the loop is the star)."

[dependencies]
spore-core = { path = "../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
