[project]
name = "spore-example-09-self-verifying"
version = "0.0.0"
description = "spore-core example 09 — a quality loop as a harness strategy (SelfVerifying) (Python)"
requires-python = ">=3.12"
dependencies = ["spore-core", "spore-tools"]

[tool.uv.sources]
spore-core = { path = "../../../python/packages/spore_core", editable = true }
spore-tools = { path = "../../../python/packages/spore_tools", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"
