[project]
name = "spore-example-11-multi-agent"
version = "0.0.0"
description = "spore-core example 11 — multi-agent composition: agents as tools (Python)"
requires-python = ">=3.12"
dependencies = ["spore-core", "spore-tools"]

[tool.uv.sources]
spore-core = { path = "../../../python/packages/spore_core", editable = true }
spore-tools = { path = "../../../python/packages/spore_tools", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"
