[package]
name = "filesystem-agent"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 04: the same ReAct loop as 03, but with built-in catalogue file tools."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
