[package]
name = "custom-sandboxed-tool"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 05: custom `impl Tool` tools (remember / recall) registered via StandardTool + .tool()."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
