[package]
name = "custom-sandboxed-tool"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 05: custom tools (remember / recall) defined with the tool! macro + .tool()."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
