[package]
name = "web-research"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 06: external API tools — web_search wired into the same ReAct loop + sandbox as 04."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
