[package]
name = "memory"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 07: the storage seam — a MarkdownMemoryProvider that persists agent memory to a human-readable .md file."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
