[package]
name = "plan-execute"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 08: swap the loop strategy from ReAct to PlanExecute — same builder, same tools, multi-step goal decomposition."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
