[package]
name = "self-verifying"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 09: the SelfVerifying loop strategy — draft, critique against an explicit spec, revise until it passes. The quality loop is a harness concern, not application logic."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
