[package]
name = "multi-agent"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 11: multi-agent composition — an orchestrator delegates to isolated research + writing worker agents wired in as tools (SubagentTool)."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
