[package]
name = "cordyceps"
version = "0.1.0"
edition = "2021"
publish = false
description = "spore-core example 12: a basic ReAct coding agent — example 04's components (conversational ReAct + catalogue tools + workspace sandbox) wrapped in a REPL."

[dependencies]
spore-core = { path = "../../../rust/crates/spore-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
# Raw-mode key input so a bare Esc can abort a running task (no Enter needed).
crossterm = "0.28"
