[package]
name = "spore-core"
version = "0.0.0"
edition = "2021"
description = "spore-core harness runtime library"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures-core = "0.3"
futures-util = "0.3"
trait-variant = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt"] }
async-stream = "0.3"

[features]
default = []
test-utils = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
spore-core = { path = ".", features = ["test-utils"] }
