[package]
name = "spore-core"
version = "0.0.0"
edition = "2021"
description = "spore-core harness runtime library"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
futures-core = "0.3"
futures-util = "0.3"
trait-variant = "0.1"
tokio = { version = "1", features = ["sync", "time", "macros", "rt", "fs", "process", "io-util"] }
async-stream = "0.3"
glob = "0.3"
regex = "1"
walkdir = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
sha2 = "0.11.0"
opentelemetry = "0.30"
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.30", default-features = false, features = ["grpc-tonic", "trace"] }

[features]
default = []
test-utils = []
# Gates the two named safety footguns `Mode::Yolo` and `IsolationMode::None`.
# When this feature is OFF (the default), those variants do not exist, so any
# attempt to use them is a compile error rather than a runtime warning. Intended
# for benchmarking and local development only — do not enable in production.
dangerous = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3"
spore-core = { path = ".", features = ["test-utils"] }
tempfile = "3"
wiremock = "0.6"
