[package]
name = "spore-eval"
version = "0.0.0"
edition = "2021"
description = "spore-core evaluation harness"
license = "Apache-2.0"

[[bin]]
name = "spore-eval"
path = "src/bin/spore-eval.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
spore-core = { path = "../spore-core" }
# anyhow is allowed ONLY in the CLI binary, per CONVENTIONS.md.
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "process", "time"] }
tempfile = "3"

[dev-dependencies]
spore-core = { path = "../spore-core", features = ["test-utils"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
